# Open_Source_Economic_Model

./: .gitignore  AGENTS.md  AL Methodology.ipynb  ALM.ini  Agent.py  AssetClass.py  BondClasses.py  CashClass.py  ConfigurationClass.py  Corporate Bonds.ipynb  Curves.py  CurvesClass.py  Equity POC Example.ipynb  EquityClasses.py  Equity_Class_Dev.ipynb  ExportData.py  FrequencyClass.py  ImportData.py  InputSWClass.py  LIABILITY_PROTOTYPE_TO_DO.ipynb  LiabilityClasses.py  MainLoop.py  Main_Script v2.ipynb  OSAL_POC_Documentation_draft.ipynb  POC_main.py  PROTOTYPE BOND PRICING.ipynb  PROTOTYPE BOND PRICING_v2.ipynb  PROTOTYPE CALIBRATION AND PROJECTION.ipynb  PROTOTYPE EQUITY PRICING.ipynb  Param_no_VA.csv  Parameters.csv  PathsClasses.py  Projection of the risk free curve and recalibration inside OSEM.ipynb  PropertClasses.py  PropertyClasses.py  README.md  Sector_Spread.csv  SettingsClasses.py  SocietyClass.py  Summary charts for OSEM run.ipynb  (+20 more)
.ipynb_checkpoints/: LIABILITY_PROTOTYPE-checkpoint.ipynb  _PROJECTION OF THE RISK FREE CURVE AND RECALIBRATION-checkpoint.ipynb  _PROTOTYPE BOND PRICING-checkpoint.ipynb  _PROTOTYPE EQUITY PRICING-checkpoint.ipynb  _PROTOTYPE UNIT LINKED-checkpoint.ipynb  _SUMMARY CHARTS FOR OSEM RUN-checkpoint.ipynb  _TRADING-checkpoint.ipynb
Archive/: Equity_Class_Dev.ipynb  OSEM_Documentation_draft.ipynb  POC_Example.xlsx  Results_With_Some_Tests.xlsx  _PROJECTION OF THE RISK FREE CURVE AND RECALIBRATION.ipynb  _PROTOTYPE BOND PRICING.ipynb  _PROTOTYPE EQUITY PRICING.ipynb  _PROTOTYPE EQUITY PRICING_v2.ipynb  (+1 more)
Input/: Bond_Portfolio 2.csv  (+15 more)
(+37 files in other folders)
