[project]
name = "osem"
version = "0.1.0"
description = "Open-Source Economic Model — asset-liability management proof-of-concept"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<4",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["unit_tests"]
